# Vision-Node

./: .env  .env.anchor-template  .env.genesis  .env.tester.v3.0.0  .gitignore  7070-ANCHOR-FALLBACK-COMPLETE.md  ATOMIC_SWAP_HARDENING.md  ATOMIC_SWAP_HARDENING_COMPLETE.md  BOOTSTRAP_REORG_FIX.md  CHAIN_SAFETY_GUARDS.md  CHAIN_TIP_UNIFICATION_COMPLETE.md  CHANGELOG  CHANGELOG.md  CHANGELOG_2026-01-12.md  CHANGELOG_v1.0.1.md  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  COMPILATION_BOUNDARY_PROGRESS.md  CONNECTION_TIMEOUT_FIX.md  CONTRIBUTING  CONTRIBUTING.md  CUSTODY_PATHS_AUDIT_v1.0.0.md  Cargo.toml  DEFINITION_OF_DONE_TESTS.md  DETERMINISTIC_ADDRESSES_TEST.md  DIAGNOSTIC_CHECK_HEIGHTS.md  DIAL_FAILURE_TRACKING.md  DIFFICULTY_LOGGING_AUDIT.md  DISTRIBUTION_CHECKLIST_v1.0.3.md  Dockerfile  EXCHANGE_REALNESS_AUDIT_v1.0.0.md  FORKING.md  FORT_KNOX_LOCKDOWN.md  GATE_ALIGNMENT_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IP_GUARDRAILS_COMPLETE.md  LEGENDARY_WALLET_IMPLEMENTATION_SUMMARY.md  LEGENDARY_WALLET_MAINNET_DEPLOYMENT.md  LEGENDARY_WALLET_QUICK_REF.md  LICENSE  (+242 more)
archived-env-files/: .env.ARCHIVED  .env.example.ARCHIVED  .env.miner-template.ARCHIVED  .env.tokenomics.sample.ARCHIVED  .env.v3.0.0.ARCHIVED
backups/: vision-node-backup-9e094e6.bundle
config/: external_rpc.json.example  external_rpc.toml  seed_peers.toml  token_accounts.toml
docs/: ADVANCED_PANEL_FEATURES.md  BEACON_P2P_ARCHITECTURE_FIX.md  BOOTSTRAP_NODE_SETUP.md  BUILD_VARIANTS.md  CASH_SYSTEM.md  CHANGELOG-v1.0-LAND.md  COMPACT_BLOCKS_COMPLETE.md  CONNECT_TO_MY_NODE.txt  CONSENSUS.md  CONTROL_PLANE_7070_COMPLETE.md  CONTROL_PLANE_QUICK_REF.md  COPILOT_PATCH_CONNECTION_FIXES.md  CPU_MINING_IMPLEMENTATION_COMPLETE.md  CPU_MINING_QUICK_REF.md  CRYPTO_TO_CRYPTO_PAIRS.md  DB_VAULT_MIGRATION_SESSION_SUMMARY.md  DISCORD_OAUTH_INTEGRATION.md  ENHANCEMENTS_SUMMARY.md  EVEN_SPLIT_STAKING_REWARDS.md  EXTERNAL_RPC.md  EXTERNAL_RPC_IMPLEMENTATION.md  EXTERNAL_RPC_PHASE2_IMPLEMENTATION.md  EXTERNAL_RPC_PHASE2_STATUS.md  FINAL_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_1_COMPLETION_CHECKLIST.md  FIX_1_DB_BACKED_VAULT_STORAGE_COMPLETE.md  FIX_2_AUTO_BUY_INTEGRATION_COMPLETE.md  FORK_PREVENTION_AUDIT_FINAL_SUMMARY.md  FORK_PREVENTION_QUICK_REF.md  FORK_SAFETY_AUDIT_COMPLETE.md  FOUNDATION_CONFIG_COMPLETE.md  FOUNDATION_CONFIG_INDEX.md  FOUNDATION_CONFIG_QUICK_REF.md  FOUNDATION_CONFIG_TEST_PLAN.md  FOUNDATION_CONFIG_TEST_RESULTS.md  FOUNDATION_CONFIG_UNIFICATION.md  FOUNDATION_CONFIG_VERIFICATION.md  GENESIS.md  GENESIS_FIX_README.txt  (+117 more)
does_not_exist/: db
frontend/: HealthDashboard.vue
keys/: alice.json
public/: dashboard.html  index.html
release-package/: README.txt  START-VISION-NODE.bat  VERSION-INFO.txt
run-node10100-20251224-090505/: launch.ps1
run-node10100-20251224-211610/: launch.ps1
run-node10100-20251224-221125/: launch.ps1
run-node11110-20251224-090505/: launch.ps1
run-node11110-20251224-211610/: launch.ps1
run-node11110-20251224-221125/: launch.ps1
run-node7070-20251224-090505/: launch.ps1
run-node7070-20251224-211610/: launch.ps1
run-node7070-20251224-221125/: launch.ps1
run-node8080-20251224-090505/: launch.ps1
run-node8080-20251224-211610/: launch.ps1
run-node8080-20251224-221125/: launch.ps1
run-node9090-20251224-090505/: launch.ps1
run-node9090-20251224-211610/: launch.ps1
run-node9090-20251224-221125/: launch.ps1
scripts/: _copy_dist.ps1  _probe_ui.ps1  build-and-copy-wallet.ps1  burst-test.ps1  check-network.ps1  check-rewards.ps1  checksums.ps1  demo-trading-full.ps1  deploy-panel.ps1  diagnose-wallet.bat  diagnose-wallet.ps1  do-sync-test.ps1  export-bootstrap-hashes.ps1  fix-wallet.ps1  make-release.ps1  mock-bootstrap-server.ps1  mock-bootstrap-server.py  pack-linux.sh  pack-windows.ps1  probe-all.ps1  probe-node.ps1  recover_pre_reset.ps1  run-3nodes.ps1  setup-bootstrap-node.ps1  smoke-test.ps1  smoke_test.ps1  start-exe.ps1  start-node.ps1  test-3nodes-simple.ps1  test-3nodes-sync.ps1  test-block-propagation.ps1  test-compact-blocks.ps1  test-compact-simple.ps1  test-dashboard.ps1  test-external-rpc.ps1  test-live-trade.ps1  test-metrics.ps1  test-multinode.ps1  test-reorg.ps1  test-token-accounts.ps1  (+7 more)
security/: AUDIT_REPORT_2025-11-21.md
src/: accounts.rs  auto_sync.rs  chain_era.rs  consensus.rs  emissions.rs.DISABLED  external_rpc.rs  foundation_config.rs  genesis.rs  governance_democracy.rs  hardware_wallet.rs  key_manager.rs  key_manager_legacy.rs  legendary_wallet_api.rs  lottery_eligibility.rs  main.rs  mempool.rs  metrics.rs  miner_manager.rs  mining_readiness.rs  oracle.rs  p2p.rs  pending_rewards.rs  performance.rs  placeholder_keys.rs  receipts.rs  runtime_mode.rs  send.rs  shutdown.rs  sig_agg.rs  staged_stubs.rs  tx_history.rs  utxo_manager.rs  utxo_signing.rs  version.rs  vision_constants.rs  wallet.rs  withdrawals.rs
test-node-a/: constellation.json
tests/: admin_bearer.rs  admin_smoke.rs  full_workflow_integration.rs  harness.rs  integration_node_http.rs  mempool_eviction_and_rbf.rs  mempool_rate_limit.rs  order_book_enhancements_test.rs  order_book_enhancements_test.rs.disabled  order_book_enhancements_test.rs.skip  pool_integration.rs  sync_pull_retry_prom.rs  sync_push_reorg.rs  test_war_mode.rs  tokenomics.rs  wallet_receipts.rs
vision-node-v1.0.1-linux-source/: INSTALL_GUIDE.sh  NOTICE  README.md  install.sh  miner.json
vision-node-v1.0.1-windows-mainnet/: RELEASE_NOTES.txt  UPDATE_v1.0.1.md  diagnose-ghost-node.ps1  start.bat
vision-node-v1.0.3-linux-source/: BUILD.md  CRITICAL_UPGRADE_v1.0.3.md  Cargo.toml  NETWORK_SECURITY_FIXES_TODO.md  RELEASE_NOTES.txt  build.rs  keys.json.example  seed_peers.json
vision-node-v1.0.3-windows-mainnet/: README.md  RELEASE_NOTES.txt  miner.json
vision_data_60855/: db
vision_data_64498/: db
vision_data_7070/: blk-00001.toc  snap.00000000008FD38D  snap.0000000000B51B05
vision_data_7071/: db  snap.00000000000590A4
vision_data_7071.bak_20250925232730/: db  snap.00000000000256E0
vision_data_7071.bak_20250925234616/: db  snap.0000000000030532
vision_data_7072/: db  (+1 more)
(+475 files in other folders)
