[package]
name = "vision-node"
version = "0.1.0"
edition = "2021"
default-run = "vision-node"
resolver = "2"
build = "build.rs"

[features]
default = ["lite"]
lite = []        # MVP build (what we ship first)
full = []        # Everything else (advanced, off by default)

[dependencies]
# async + web
tokio = { version = "1", features = ["full"] }
axum  = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
# HTTP client (TLS via rustls for Windows)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"
# Parallel processing
rayon = "1.8"
num_cpus = "1.16"

# state / storage
sled        = "0.34"
once_cell   = "1.19"
parking_lot = "0.12"
lazy_static = "1.4"

# crypto
blake3          = "1.5"
ed25519-dalek   = { version = "1", features = ["serde", "std"] }
hex             = "0.4"
blst            = "0.3"  # BLS12-381 signatures for aggregation
siphasher       = "1.0"  # SipHash-2-4 for compact block short tx IDs
flate2          = "1.0"  # Gzip compression for snapshots
wasmer          = "4.2"  # WASM runtime for smart contracts
revm            = "8.0"  # EVM bytecode execution engine

# serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
bincode    = "1.3"
base64     = "0.21"
chrono     = { version = "0.4", features = ["serde"] }

# errors
thiserror = "1"
anyhow    = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.7"
tower-http = { version = "0.6.6", features = ["cors", "limit", "fs", "compression-gzip", "compression-br", "decompression-gzip", "decompression-br"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
prometheus = "0.14"
urlencoding = "2.1"  # URL encoding/decoding for network topology
uuid = { version = "1.10", features = ["v4", "serde"] }  # Bundle ID generation

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# CI profile: same as release but will be used with RUSTFLAGS="-D warnings"
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[[bin]]
name = "vision-node"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
http = "0.2"
hyper = "0.14"


# If/when you add a CLI, uncomment this and create src/bin/vision-cli.rs
# [[bin]]
# name = "vision-cli"
# path = "src/bin/vision-cli.rs"
