[package]
name = "vision-node"
version = "1.0.0"
edition = "2021"
default-run = "vision-node"
resolver = "2"
build = "build.rs"
license = "Apache-2.0"

[features]
default = ["multi-currency", "full", "launch-core"]  # Ship ONE build world: FULL by default
lite = []        # Deprecated: disabled by compile-time guard in src/main.rs
full = []        # Full feature set marker (single-world build)
launch-core = []          # Launch build surface (active routes/runtime)
staging = []              # Parked/staging features (guardian, mood, tip, governance, node_approval, legacy, etc.)
staged = ["staging"]      # Alias for backward compatibility (old scripts may use --features staged)
guardian = ["staging"]    # Alias for backward compatibility (maps to staging)
miner-tuning = []         # Miner auto-tuner/perf/telemetry stack
tokenomics-v2 = []        # Advanced tokenomics engine (parked in main.rs)
archive = []              # Archive/indexing/data-availability parked code
farm = []                 # Farm/rig control endpoints and state
resilience = []           # Network topology/reputation experiments
multi-currency = ["bitcoin", "bip32", "bitcoincore-rpc"]  # BTC/BCH/DOGE wallet support
hwloc = ["hwloc2"]  # Advanced NUMA topology detection (optional)
market-tests-disabled = []  # Disable market order book tests

[dependencies]
# async + web
tokio = { version = "1", features = ["full"] }
axum  = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
# HTTP client (TLS via rustls for Windows)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"
# Parallel processing
rayon = "1.8"
num_cpus = "1.16"
sysinfo = "0.30"  # CPU model and core detection

# state / storage
sled        = "0.34"
rusqlite    = { version = "0.29", features = ["bundled"] }  # Discord OAuth wallet linking
once_cell   = "1.19"
parking_lot = "0.12"
lazy_static = "1.4"
dirs = "5"

# crypto
blake3          = "1.5"
ed25519-dalek   = { version = "2.1", features = ["serde", "rand_core"] }
curve25519-dalek = "4.1"  # Monitor for patch addressing RUSTSEC-2024-0344
hex             = "0.4"
blst            = "0.3"  # BLS12-381 signatures for aggregation
hmac            = "0.12" # HMAC for Discord OAuth state signing
sha2            = "0.10" # SHA-256 for Discord OAuth and node identity
secp256k1       = { version = "0.27", features = ["recovery"] }  # ECDSA for wallet signature verification
siphasher       = "1.0"  # SipHash-2-4 for compact block short tx IDs
flate2          = "1.0"  # Gzip compression for snapshots
wasmer          = "4.2"  # WASM runtime for smart contracts
revm            = "8.0"  # EVM bytecode execution engine
bs58            = "0.5"  # Base58 encoding for DOGE addresses
ripemd          = "0.1"  # RIPEMD160 for address generation

# serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
bincode    = "1.3"
base64     = "0.21"
chrono     = { version = "0.4", features = ["serde"] }

# errors
thiserror = "1"
anyhow    = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
tower-http = { version = "0.6.6", features = ["cors", "limit", "fs", "compression-gzip", "compression-br", "decompression-gzip", "decompression-br"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
prometheus = "0.14"
urlencoding = "2.1"  # URL encoding/decoding for network topology
url = "2.5"  # URL parsing for constellation config
uuid = { version = "1.10", features = ["v4", "serde"] }  # Bundle ID generation
zip = { version = "0.6", default-features = false, features = ["deflate"] }  # FarmHand bundle creation

# Multi-currency wallet support (BTC, BCH, DOGE)
bitcoin = { version = "0.29", optional = true }
bip32 = { version = "0.5", optional = true }
bitcoincore-rpc = { version = "0.17", optional = true }
hostname = "0.3"  # Pool URL generation

# UPnP port forwarding
igd = "0.12"  # Internet Gateway Device protocol for automatic port forwarding

# GeoIP - MaxMind GeoIP2 for production-grade geolocation
maxminddb = "0.23"  # MaxMind DB reader for GeoIP2 databases

# Miner Intelligence Enhancements
battery = "0.7"  # Cross-platform battery detection
hwloc2 = { version = "2.2", optional = true }  # NUMA topology (optional)

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # For thread affinity on Linux

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# CI profile: same as release but will be used with RUSTFLAGS="-D warnings"
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[[bin]]
name = "vision-node"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
http = "0.2"
hyper = "0.14"


# If/when you add a CLI, uncomment this and create src/bin/vision-cli.rs
# [[bin]]
# name = "vision-cli"
# path = "src/bin/vision-cli.rs"



